
* LUCENE-10563: Fix failure to tessellate complex polygon (Craig Taverner)

* LUCENE-10605: Fix error in 32bit jvm object alignment gap calculation (Sun Wuqiang)

* GITHUB#956: Make sure KnnVectorQuery applies search boost. (Julie Tibshirani)

* LUCENE-10598: SortedSetDocValues#docValueCount() should be always greater than zero. (Lu Xugang)

Other
---------------------

* LUCENE-10370: pass proper classpath/module arguments for forking jvms from within tests. (Dawid Weiss)

* LUCENE-10604: Improve ability to test and debug triangulation algorithm in Tessellator.
  (Craig Taverner)

======================= Lucene 9.2.0 =======================

API Changes
---------------------

* LUCENE-10325: Facets API extended to support getTopFacets. (Yuting Gan)

* LUCENE-10482: Allow users to create their own DirectoryTaxonomyReaders with empty taxoArrays instead of letting the
  taxoEpoch decide. Add a test case that demonstrates the inconsistencies caused when you reuse taxoArrays on older
  checkpoints. (Gautam Worah)

* LUCENE-10558: Add new constructors to Kuromoji and Nori dictionary classes to support classpath /
  module system usage. It is now possible to use JDK's Class/ClassLoader/Module#getResource(...) apis
  and pass their returned URL to dictionary constructors to load resources from Classpath or Module
  resources. (Uwe Schindler, Tomoko Uchida, Mike Sokolov)

New Features
---------------------

* LUCENE-10312: Add PersianStemmer based on the Arabic stemmer. (Ramin Alirezaee)

* LUCENE-10539: Return a stream of completions from FSTCompletion. (Dawid Weiss)

* LUCENE-10385: Implement Weight#count on IndexSortSortedNumericDocValuesRangeQuery
  to speed up computing the number of hits when possible. (Lu Xugang, Luca Cavanna, Adrien Grand)

* LUCENE-10422: Monitor Improvements: `Monitor` can use a custom `Directory` 
  implementation. `Monitor` can be created with a readonly `QueryIndex` in order to
  have readonly `Monitor` instances. (Niko Usai)
