@@ -1155,7 +1155,7 @@ public class MemoryIndex {
       }
 
       @Override
-      public long docValueCount() {
+      public int docValueCount() {
         return values.size();
       }
 
